<resources>
    <string name="app_name">House Tools App</string>


    <string name="hello_test_fragment">Test Fragment</string>


    <string name="no_tool">Add a new tool to fill this spot</string>


    <string name="current_time_title">Current Time</string>

    <string name="timer_title">Timer</string>

    <string name="default_time">Time</string>

    <string name="timer_start_button">Start</string>

    <string name="timer_value_default">Done</string>


    <string name="clock_title">Stopwatch</string>

    <string name="clock_toggle_start">Start Clock</string>

    <string name="clock_toggle_stop">Stop Clock</string>

    <string name="clock_reset">Reset Clock</string>


    <string name="simple_counter_subtract_string">Sub</string>

    <string name="simple_counter_add_string">Add</string>

    <string name="simple_counter_title">Counter</string>

    <string name="simple_counter_output">0</string>

    <string name="simple_periodic_reminder_title">Reminder</string>

    <string name="simple_periodic_reminder_button_check">Check</string>

    <string name="tally_title">Tally</string>

    <string name="tally_output_default">0</string>

    <string name="tally_button_add">Add</string>


    <string name="edit_tools_title">Edit Tools</string>

    <string name="default_tool_title">Tool</string>

    <string name="default_tool_desc">Tool Description</string>

    <string name="remove_tool_button">Remove</string>

    <string name="add_tool_title">Add Tool</string>

    <string name="add_tool_desc">Add a new tool into this spot</string>

    <string name="add_tool_button">Add</string>


    <string name="new_tool_title">New Tool</string>

    <string-array name="time_units_selection">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>

</resources>
