<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/toolFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tools.SimpleCounter">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/simpleCounterOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_counter_output"
            style="@style/OutputValues"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCounterDecrement"
            app:layout_constraintEnd_toStartOf="@+id/buttonCounterIncrement"
            app:layout_constraintStart_toEndOf="@+id/buttonCounterDecrement"
            app:layout_constraintTop_toTopOf="@+id/buttonCounterDecrement" />

        <TextView
            android:id="@+id/simpleCounterTitle"
            style="@style/toolTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/simple_counter_title"
            app:layout_constraintBottom_toTopOf="@+id/buttonCounterDecrement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCounterDecrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/simple_counter_subtract_string"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleCounterTitle" />

        <Button
            android:id="@+id/buttonCounterIncrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_counter_add_string"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCounterDecrement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/buttonCounterDecrement"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="192dp"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>