<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/toolFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tools.CountdownTimer">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/timeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/default_time"
            app:layout_constraintEnd_toStartOf="@id/start-stopCountdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerTitle" />

        <TextView
            android:id="@+id/countdownValue"
            style="@style/OutputValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/timer_value_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeInput" />

        <Button
            android:id="@+id/start-stopCountdown"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/timer_start_button"
            app:layout_constraintBottom_toBottomOf="@+id/timeInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/timeInput" />

        <Spinner
            android:id="@+id/timeUnitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/timerTitle"
            app:layout_constraintEnd_toEndOf="@+id/start-stopCountdown"
            app:layout_constraintTop_toTopOf="@+id/timerTitle" />

        <TextView
            android:id="@+id/timerTitle"
            style="@style/toolTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/timer_title"
            app:layout_constraintBottom_toTopOf="@+id/timeInput"
            app:layout_constraintStart_toStartOf="@+id/timeInput"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>