<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tools.SimpleTally">



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tallyTitle"
            style="@style/toolTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tally_title"
            app:layout_constraintBottom_toTopOf="@+id/tallyInput"
            app:layout_constraintStart_toStartOf="@+id/tallyInput" />

        <EditText
            android:id="@+id/tallyInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tallyAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/tally_button_add"
            app:layout_constraintBottom_toBottomOf="@+id/tallyInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tallyInput" />

        <TextView
            android:id="@+id/tallyOutput"
            style="@style/OutputValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tally_output_default"
            app:layout_constraintBottom_toTopOf="@+id/tallyInput"
            app:layout_constraintStart_toStartOf="@+id/tallyAdd" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>